// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render CardInnerBody 1`] = `
<div
  class="wp-components-surface wp-components-card css-1qt13ik"
  data-g2-c16t="true"
  data-g2-component="Card"
>
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="CardContent"
  >
    <div
      class="wp-components-view wp-components-flex wp-components-card-header css-1ldzg2o"
      data-g2-c16t="true"
      data-g2-component="CardHeader"
      title="Olaf"
    />
    <div
      class="wp-components-card-inner-body css-1jols3x"
      data-g2-c16t="true"
      data-g2-component="CardInnerBody"
    >
      Some people are worth melting for.
    </div>
    <div
      class="wp-components-view wp-components-flex wp-components-card-footer css-60wq1a"
      data-g2-c16t="true"
      data-g2-component="CardFooter"
    >
      <div
        class="wp-components-view wp-components-flex-item css-1suoifq"
        data-g2-c16t="true"
        data-g2-component="FlexItem"
      >
        <button
          aria-busy="false"
          class="wp-components-base-button wp-components-button css-1j1os03"
          data-destructive="false"
          data-g2-c16t="true"
          data-g2-component="Button"
          data-icon="false"
          type="button"
        >
          <span
            class="wp-components-view wp-components-flex css-k86duv"
            data-g2-c16t="true"
            data-g2-component="Flex"
          >
            <span
              class="wp-components-view wp-components-flex-item wp-components-flex-block css-2fa4s0"
              data-g2-c16t="true"
              data-g2-component="ButtonContent"
            >
              Agree
            </span>
          </span>
          <span
            class="wp-components-elevation css-17x6dun"
            data-g2-c16t="true"
            data-g2-component="ButtonElevation"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    class="wp-components-elevation css-18hqkt0"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
  <div
    class="wp-components-elevation css-1873flw"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-surface wp-components-card css-1qt13ik"
  data-g2-c16t="true"
  data-g2-component="Card"
>
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="CardContent"
  >
    <div
      class="wp-components-view wp-components-flex wp-components-card-header css-1ldzg2o"
      data-g2-c16t="true"
      data-g2-component="CardHeader"
      title="Olaf"
    />
    <div
      class="wp-components-scrollable wp-components-card-body css-1ojbcxg"
      data-g2-c16t="true"
      data-g2-component="CardBody"
    >
      <div
        class="css-1qs21wj"
      >
        Some people are worth melting for.
      </div>
    </div>
    <div
      class="wp-components-view wp-components-flex wp-components-card-footer css-60wq1a"
      data-g2-c16t="true"
      data-g2-component="CardFooter"
    >
      <div
        class="wp-components-view wp-components-flex-item css-1suoifq"
        data-g2-c16t="true"
        data-g2-component="FlexItem"
      >
        <button
          aria-busy="false"
          class="wp-components-base-button wp-components-button css-1j1os03"
          data-destructive="false"
          data-g2-c16t="true"
          data-g2-component="Button"
          data-icon="false"
          type="button"
        >
          <span
            class="wp-components-view wp-components-flex css-k86duv"
            data-g2-c16t="true"
            data-g2-component="Flex"
          >
            <span
              class="wp-components-view wp-components-flex-item wp-components-flex-block css-2fa4s0"
              data-g2-c16t="true"
              data-g2-component="ButtonContent"
            >
              Agree
            </span>
          </span>
          <span
            class="wp-components-elevation css-17x6dun"
            data-g2-c16t="true"
            data-g2-component="ButtonElevation"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    class="wp-components-elevation css-18hqkt0"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
  <div
    class="wp-components-elevation css-1873flw"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
</div>
`;

exports[`props should render elevation 1`] = `
<div
  class="wp-components-surface wp-components-card css-1qt13ik"
  data-g2-c16t="true"
  data-g2-component="Card"
>
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="CardContent"
  />
  <div
    class="wp-components-elevation css-18hqkt0"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
  <div
    class="wp-components-elevation css-zytxex"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
</div>
`;

exports[`props should render no elevation 1`] = `
<div
  class="wp-components-surface wp-components-card css-1qt13ik"
  data-g2-c16t="true"
  data-g2-component="Card"
>
  <div
    class="wp-components-view css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="CardContent"
  />
  <div
    class="wp-components-elevation css-16j6c8z"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
  <div
    class="wp-components-elevation css-12htjgm"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
</div>
`;
